@startuml

title __GRPC's Class Diagram__\n

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.ClientStreamObserver {
        {static} - log : Logger
        + ClientStreamObserver()
        + onCompleted()
        + onError()
        + onNext()
    }
  }
  

  namespace org.factcast.client.grpc {
    interface org.factcast.client.grpc.FactCastGrpcChannelFactory {
        {abstract} + createChannel()
        {abstract} + createChannel()
    }
  }
  

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.FactcastRemoteException {
        {static} - log : Logger
        {static} + from()
    }
  }
  

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.GrpcFactStore {
        {static} - CHANNEL_NAME : String
        {static} - PROTOCOL_VERSION : ProtocolVersion
        - initialized : AtomicBoolean
        {static} - log : Logger
        + GrpcFactStore()
        + afterSingletonsInstantiated()
        + clearSnapshot()
        + currentTime()
        + enumerateNamespaces()
        + enumerateTypes()
        + fetchById()
        + fetchByIdAndVersion()
        + getSnapshot()
        + initialize()
        + invalidate()
        + publish()
        + publishIfUnchanged()
        + serialOf()
        + setSnapshot()
        + stateFor()
        + subscribe()
        ~ GrpcFactStore()
        ~ cancel()
        ~ configureCompression()
        {static} ~ wrapRetryable()
        - GrpcFactStore()
        {static} - logProtocolVersion()
        {static} - logServerVersion()
    }
  }
  

  namespace org.factcast.client.grpc {
    class org.factcast.client.grpc.IncompatibleProtocolVersions {
        {static} - serialVersionUID : long
        + IncompatibleProtocolVersions()
    }
  }
  

  org.factcast.client.grpc.ClientStreamObserver .up.|> io.grpc.stub.StreamObserver
  org.factcast.client.grpc.ClientStreamObserver o-- org.factcast.grpc.api.conv.ProtoConverter : converter
  org.factcast.client.grpc.ClientStreamObserver o-- org.factcast.core.subscription.SubscriptionImpl : subscription
  org.factcast.client.grpc.GrpcFactStore .up.|> org.factcast.core.store.FactStore
  org.factcast.client.grpc.GrpcFactStore .up.|> org.springframework.beans.factory.SmartInitializingSingleton
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.gen.RemoteFactStoreGrpc.RemoteFactStoreBlockingStub : blockingStub
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.CompressionCodecs : codecs
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.conv.ProtoConverter : converter
  org.factcast.client.grpc.GrpcFactStore o-- org.factcast.grpc.api.gen.RemoteFactStoreGrpc.RemoteFactStoreStub : stub


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
